@@ -20,7 +20,10 @@ import seedu.address.model.person.PersonFactory;
 import seedu.address.model.person.PersonId;
 import seedu.address.model.person.Phone;
 import seedu.address.model.person.Student;
+import seedu.address.model.person.Tutor;
 import seedu.address.model.tag.Tag;
+import seedu.address.model.tuitionclass.Day;
+import seedu.address.model.tuitionclass.Time;
 
 /**
  * Jackson-friendly version of {@link Person}.
@@ -38,6 +41,10 @@ class JsonAdaptedPerson {
     private final List<JsonAdaptedTag> tags = new ArrayList<>();
     private final String linkedParentId;
     private final List<String> childrenIds;
+    private final String linkedTutorId;
+    private final List<String> studentIds;
+    private final String tuitionDay;
+    private final String tuitionTime;
 
     /**
      * Constructs a {@code JsonAdaptedPerson} with the given person details.
@@ -48,7 +55,11 @@ class JsonAdaptedPerson {
             @JsonProperty("email") String email, @JsonProperty("address") String address,
             @JsonProperty("tags") List<JsonAdaptedTag> tags,
             @JsonProperty("linkedParentId") String linkedParentId,
-            @JsonProperty("childrenIds") List<String> childrenIds) {
+            @JsonProperty("childrenIds") List<String> childrenIds,
+            @JsonProperty("linkedTutorId") String linkedTutorId,
+            @JsonProperty("studentIds") List<String> studentIds,
+            @JsonProperty("tuitionDay") String tuitionDay,
+            @JsonProperty("tuitionTime") String tuitionTime) {
         this.id = id;
         this.category = category;
         this.name = name;
@@ -64,6 +75,14 @@ class JsonAdaptedPerson {
         } else {
             this.childrenIds = new ArrayList<>();
         }
+        this.linkedTutorId = linkedTutorId;
+        if (studentIds != null) {
+            this.studentIds = new ArrayList<>(studentIds);
+        } else {
+            this.studentIds = new ArrayList<>();
+        }
+        this.tuitionDay = tuitionDay;
+        this.tuitionTime = tuitionTime;
     }
 
     /**
@@ -78,23 +97,46 @@ class JsonAdaptedPerson {
         address = source.getAddress().value;
         tags.addAll(source.getTags().stream()
                 .map(JsonAdaptedTag::new)
-                .collect(Collectors.toList()));
+                .toList());
 
-        // Handle Student and Parent specific fields
+        // Handle Student, Parent and Tutor specific fields
         if (source instanceof Student) {
             Student student = (Student) source;
             this.linkedParentId = student.getParentId() != null ? student.getParentId().getValue() : null;
             this.childrenIds = new ArrayList<>(); // Student has no children
+            this.linkedTutorId = student.getTutorId() != null ? student.getTutorId().getValue() : null;
+            this.studentIds = new ArrayList<>(); //Student has no tutor
+            this.tuitionDay = student.getTuitionDay().map(Enum::toString).orElse(null);
+            this.tuitionTime = student.getTuitionTime().map(Enum::toString).orElse(null);
         } else if (source instanceof Parent) {
             Parent parent = (Parent) source;
             this.linkedParentId = null; // Parent has no linked parent
             this.childrenIds = parent.getChildrenIds().stream()
                     .map(PersonId::getValue)
                     .collect(Collectors.toList());
+            this.linkedTutorId = null; // Parent has no linked tutor
+            this.studentIds = new ArrayList<>();
+            this.tuitionDay = null;
+            this.tuitionTime = null;
+
+        } else if (source instanceof Tutor) {
+            Tutor tutor = (Tutor) source;
+            this.linkedParentId = null; // Tutor has no linked parent
+            this.childrenIds = new ArrayList<>();
+            this.linkedTutorId = null; // Tutor has no linked tutor
+            this.studentIds = tutor.getStudentsIds().stream()
+                    .map(PersonId::getValue)
+                    .collect(Collectors.toList());
+            this.tuitionDay = null;
+            this.tuitionTime = null;
         } else {
-            // Default case for Tutor or other Person types
+            // Default case for other Person types
             this.linkedParentId = null;
             this.childrenIds = new ArrayList<>();
+            this.linkedTutorId = null;
+            this.studentIds = new ArrayList<>();
+            this.tuitionDay = null;
+            this.tuitionTime = null;
         }
     }
 
@@ -159,8 +201,40 @@ class JsonAdaptedPerson {
         } catch (IllegalArgumentException ex) {
             throw new IllegalValueException("Invalid category");
         }
-        return PersonFactory.createPerson(modelId, modelCategory, modelName, modelPhone,
+        Person person = PersonFactory.createPerson(modelId, modelCategory, modelName, modelPhone,
                 modelEmail, modelAddress, modelTags);
+
+        if (person instanceof Student) {
+            Student student = (Student) person;
+            if (tuitionDay != null && tuitionTime != null) {
+                try {
+                    Day modelDay = Day.fromString(tuitionDay);
+                    Time modelTime = Time.fromString(tuitionTime);
+                    student.setTuitionClass(modelDay, modelTime);
+                } catch (IllegalArgumentException e) {
+                    throw new IllegalValueException("Invalid day or time found in storage for student.");
+                }
+            }
+            if (linkedParentId != null) {
+                student.setParentId(PersonId.of(linkedParentId));
+            }
+            if (linkedTutorId != null) {
+                student.setTutorId(PersonId.of(linkedTutorId));
+            }
+        }
+        if (person instanceof Parent && childrenIds != null) {
+            Parent parent = (Parent) person;
+            for (String childId : childrenIds) {
+                parent.addChildId(PersonId.of(childId));
+            }
+        }
+        if (person instanceof Tutor && studentIds != null) {
+            Tutor tutor = (Tutor) person;
+            for (String studentId : studentIds) {
+                tutor.addStudentId(PersonId.of(studentId));
+            }
+        }
+        return person;
     }
 
 }
