@@ -2,7 +2,6 @@ package seedu.address.storage;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
@@ -12,6 +11,7 @@ import seedu.address.commons.exceptions.IllegalValueException;
 import seedu.address.model.AddressBook;
 import seedu.address.model.ReadOnlyAddressBook;
 import seedu.address.model.person.Person;
+import seedu.address.model.tuitionclass.TuitionClass;
 
 /**
  * An Immutable AddressBook that is serializable to JSON format.
@@ -20,15 +20,21 @@ import seedu.address.model.person.Person;
 class JsonSerializableAddressBook {
 
     public static final String MESSAGE_DUPLICATE_PERSON = "Persons list contains duplicate person(s).";
+    public static final String MESSAGE_DUPLICATE_CLASS = "Tuition classes list contains duplicate class(es).";
 
     private final List<JsonAdaptedPerson> persons = new ArrayList<>();
+    private final List<JsonAdaptedTuitionClass> tuitionClasses = new ArrayList<>();
 
     /**
      * Constructs a {@code JsonSerializableAddressBook} with the given persons.
      */
     @JsonCreator
-    public JsonSerializableAddressBook(@JsonProperty("persons") List<JsonAdaptedPerson> persons) {
+    public JsonSerializableAddressBook(@JsonProperty("persons") List<JsonAdaptedPerson> persons,
+                                       @JsonProperty("tuitionClasses") List<JsonAdaptedTuitionClass> tuitionClasses) {
         this.persons.addAll(persons);
+        if (tuitionClasses != null) {
+            this.tuitionClasses.addAll(tuitionClasses);
+        }
     }
 
     /**
@@ -37,7 +43,9 @@ class JsonSerializableAddressBook {
      * @param source future changes to this will not affect the created {@code JsonSerializableAddressBook}.
      */
     public JsonSerializableAddressBook(ReadOnlyAddressBook source) {
-        persons.addAll(source.getPersonList().stream().map(JsonAdaptedPerson::new).collect(Collectors.toList()));
+        persons.addAll(source.getPersonList().stream().map(JsonAdaptedPerson::new).toList());
+        tuitionClasses.addAll(source.getTuitionClassList().stream()
+                .map(JsonAdaptedTuitionClass::new).toList());
     }
 
     /**
@@ -54,7 +62,14 @@ class JsonSerializableAddressBook {
             }
             addressBook.addPerson(person);
         }
+
+        for (JsonAdaptedTuitionClass jsonAdaptedClass : tuitionClasses) {
+            TuitionClass tuitionClass = jsonAdaptedClass.toModelType();
+            if (addressBook.hasTuitionClass(tuitionClass)) {
+                throw new IllegalValueException(MESSAGE_DUPLICATE_CLASS);
+            }
+            addressBook.addTuitionClass(tuitionClass);
+        }
         return addressBook;
     }
-
 }
